objects/Dalmia_Class__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dalmia_Student__c</fullName>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DALMIA_Student__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dalmia_India</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>DALMIA_Student__c</referenceTo>
        <relationshipLabel>Student Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Donar__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Donar</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Student Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Class</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>